Strips overlap at channel 1 and 32 #82973

Closed
opened 2020-11-24 17:50:53 +01:00 by Gerard Taulats Braos · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.5058

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0 and newer

Short description of error
When dragging 2 or more strips from different channels (one on top of the other) to the borders (channel 1 and channel 32), they overlap, share the same space.

Exact steps for others to reproduce the error

  • Create 2 strips one on top of the other at channels 1 and 2
  • Select them and press G
  • Then dragg them to the bottom or the top
  • They overlap at the limit channel

Another way to trigger this bug is by using the power sequencer:
(This method need a fix to limit the displacement of the strips at the upper channel. I'll share it if it's wanted)

  • Create 3 strips one on top of the other at channels 30, 31 and 32
    (It does not happen when recreating the situation with channels 1, 2 and 3)
  • Select the one at the channel 30
  • Press Alt + up_arrow (channel offset)
  • The one that was at 30 now overlap with the one at 32
    With this method, it also happens when filling more channels and doing the same (fill channels 25-32 and alt+up_arrow the 25th)
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.5058 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` and newer **Short description of error** When dragging 2 or more strips from different channels (one on top of the other) to the borders (channel 1 and channel 32), they overlap, share the same space. **Exact steps for others to reproduce the error** - Create 2 strips one on top of the other at channels 1 and 2 - Select them and press G - Then dragg them to the bottom or the top - They overlap at the limit channel Another way to trigger this bug is by using the power sequencer: (This method need a fix to limit the displacement of the strips at the upper channel. I'll share it if it's wanted) - Create 3 strips one on top of the other at channels 30, 31 and 32 (It does not happen when recreating the situation with channels 1, 2 and 3) - Select the one at the channel 30 - Press Alt + up_arrow (channel offset) - The one that was at 30 now overlap with the one at 32 With this method, it also happens when filling more channels and doing the same (fill channels 25-32 and alt+up_arrow the 25th)

Added subscriber: @Tabra

Added subscriber: @Tabra

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by f21b4e69b0

This issue was referenced by f21b4e69b0ea98c3196246b0e4e4e97cd34c8e83

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-02-05 11:41:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82973
No description provided.